Fix home screen visual display layout bug

--- a/public/css/onboarding.css
+++ b/public/css/onboarding.css
@@ -1,7 +1,7 @@
 h1 {
   color: rgb(185, 85, 201);
   text-align: right;
-  font-size: 75px;
+  font-size: 60px;
   font-family: Space_Obsessed;
   letter-spacing: 0.25em;
   margin-left: 0.3em;
@@ -13,15 +13,14 @@ h1 {
 }
 
 
-
-
 .hero-button {
   position: absolute;
-  top: 85%;
+  top: 90%;
   bottom: 5%;
   text-align: center;
   font-family: Astron_Bold;
   color: rgb(251, 220, 99);
+  font-size: 15px;
 
 }
 
